--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^10.12.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-bootstrap-input-spinner": "^1.0.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-bootstrap": "^0.26.3",
