--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
-  "name": "camera_kingdom_test",
+  "name": "camera-kingdom-new",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/base": "^5.0.0-beta.61",
+    "@mui/icons-material": "^6.1.6",
+    "@mui/system": "^6.1.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
-    "firebase": "^10.12.4",
+    "firebase": "^11.0.1",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.4",
-    "react-bootstrap-input-spinner": "^1.0.2",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-bootstrap": "^0.26.3",
-    "react-router-dom": "^6.26.0",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
+    "sweetalert2": "^11.14.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,8 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
